syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message SumRequest {
    int32 firts_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}
message PrimeNumberDecompositionRequest  {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message FindMaximumRequest {
    int32 number = 1;
}

message FindMaximumResponse {
    int32 maximum = 1;
}

service CalculatorService {
    rpc sum(SumRequest)returns (SumResponse) {}

    // server streaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {}

    // client streaming
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {}

    // bidirectional streaming
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {}
}